# brain

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  justfile
.cargo/: config.toml
config/: default.yaml
crates/adapters/grpc/: Cargo.toml  build.rs
crates/adapters/grpc/proto/: agent.proto  memory.proto
crates/adapters/grpc/src/: lib.rs
crates/adapters/http/: Cargo.toml
crates/adapters/http/src/: lib.rs
crates/adapters/mcp/: Cargo.toml
crates/adapters/mcp/src/: lib.rs
crates/adapters/ws/: Cargo.toml
crates/adapters/ws/src/: lib.rs
crates/amygdala/: Cargo.toml
crates/amygdala/src/: lib.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs
crates/cerebellum/: Cargo.toml
crates/cerebellum/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cross_protocol.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs
crates/cortex/: Cargo.toml
crates/cortex/src/: actions.rs  context.rs  lib.rs  llm.rs
crates/ganglia/: Cargo.toml
crates/ganglia/src/: lib.rs
crates/hippocampus/: Cargo.toml
crates/hippocampus/src/: consolidation.rs  embedding.rs  episodic.rs  importance.rs  lib.rs  procedural.rs  search.rs  semantic.rs
crates/hippocampus/tests/: e2e.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/signal/: Cargo.toml
crates/signal/src/: lib.rs  notification.rs
crates/storage/: Cargo.toml
crates/storage/src/: encryption.rs  lance.rs  lib.rs  ruvector.rs  sqlite.rs
crates/thalamus/: Cargo.toml
crates/thalamus/src/: lib.rs
docker/: docker-compose.yml
docker/searxng/: settings.yml
docs/: VISION.md
