[package]
name = "amygdala"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hippocampus = { workspace = true }
cortex = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
async-trait = "0.1"
futures = { workspace = true }
