[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "brain"
path = "src/main.rs"

[dependencies]
core = { workspace = true }
storage = { workspace = true }
hippocampus = { workspace = true }
cortex = { workspace = true }
thalamus = { workspace = true }
signal = { workspace = true }
adapters-http = { workspace = true }
clap = { workspace = true }
rustyline = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
