[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "brain"
path = "src/main.rs"

[dependencies]
brain_core = { path = "../core", package = "core" }
storage = { workspace = true }
rusqlite = { workspace = true }
hippocampus = { workspace = true }
cortex = { workspace = true }
thalamus = { workspace = true }
signal = { workspace = true }
ganglia = { workspace = true }
httpadapter = { workspace = true }
wsadapter = { workspace = true }
grpcadapter = { workspace = true }
mcp = { workspace = true }
clap = { workspace = true }
rustyline = { workspace = true }
crossterm = { workspace = true }
rpassword = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
async-trait = "0.1"
reqwest = { workspace = true }

[dev-dependencies]
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
tonic = { version = "0.14", features = ["transport"] }
tempfile = "3"
