[package]
name = "cortex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
storage = { workspace = true }
hippocampus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
futures = "0.3"
