[package]
name = "ganglia"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
storage = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
