[package]
name = "hippocampus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
storage = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
