[package]
name = "thalamus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cortex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "1"
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
