[package]
name = "adapters-ws"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
brain_core = { path = "../../core", package = "core" }
signal = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
